[package]
name = "imgui-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = {git =  "https://github.com/imgui-rs/imgui-rs.git"}
glow = "0.10.0"
sdl2 = "0.34.5"
rand = "0.8.5"

#imgui-glow-renderer = {git =  "https://github.com/imgui-rs/imgui-rs.git"}
imgui-glium-renderer = {git =  "https://github.com/imgui-rs/imgui-rs.git"}

imgui-sdl2-support = {git =  "https://github.com/imgui-rs/imgui-rs.git"}




